fixed overflow prob

--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@ a:link {
     transition: 0.2s;
     height: fit-content;
     max-height: 500px;
-    overflow: hidden;
+    overflow: auto;
 
     /*overflow-x: auto;*/
 
